--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ authors = ["John Naylor <jonaylor89@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+keras = "^2.3.1"
+tensorflow = "^2.1.0"
+matplotlib = "^3.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
