--- a/Dockerfile.train_cGAN
+++ b/Dockerfile.train_cGAN
@@ -1,4 +1,4 @@
-FROM python:3.6.6-alpine3.7
+FROM python:3.7-slim
 
 ENV PYTHONFAULTHANDLER=1 \
   PYTHONUNBUFFERED=1 \
@@ -12,13 +12,15 @@ RUN pip install poetry
 
 # Copy only requirements to cache them in docker layer
 WORKDIR /code
-COPY poetry.lock pyproject.toml /code/
+COPY poetry.lock pyproject.toml /app/
 
 # Project initialization:
 RUN poetry config virtualenvs.create false \
   && poetry install --no-dev --no-interaction --no-ansi
 
 # Creating folders, and files for a project:
-COPY . /code
+COPY . /app
 
-CMD ["python", "fashion_mnist/cGAN_train.py"]
+RUN python quickdraw_gan/get_dataset.py
+
+CMD ["python", "quickdraw_gan/cGAN_train.py"]
