--- a/Dockerfile.train_cGAN
+++ b/Dockerfile.train_cGAN
@@ -11,7 +11,7 @@ ENV PYTHONFAULTHANDLER=1 \
 RUN pip install poetry
 
 # Copy only requirements to cache them in docker layer
-WORKDIR /code
+WORKDIR /app
 COPY poetry.lock pyproject.toml /app/
 
 # Project initialization:
